<resources>
    <string name="app_name">SAEBUT2_S4</string>
    <string name="lukassos">LukAssos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="name_app">SolidAll</string>
    <string name="connexion">Connexion</string>
    <string name="solidall">SolidAll</string>
    <string name="logo_de_solidall">Logo de SolidAll</string>
    <string name="nom_association">Nom Association</string>
    <string name="retour">Retour</string>
    <string name="passer">Passer</string>
    <string name="inscription">Inscription</string>
    <string name="vous_avez_deja_un_compte">Vous avez deja un compte ?</string>
    <string name="e_mail">E-Mail</string>
    <string name="telephone">Telephone</string>
    <string name="faire_un_don">Faire un don</string>
    <string name="indiquez_votre_nom_de_famille">Indiquez votre nom de famille</string>
    <string name="indiquez_votre_pr_nom">Indiquez votre prénom</string>
    <string name="indiquez_votre_e_mail">Indiquez votre e-mail</string>
    <string name="pr_nom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="suivant">Suivant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="vous_n_avez_pas_de_compte">Vous n’avez pas de compte ?</string>
    <string name="accueil">Accueil</string>
    <string name="recherche">Recherche</string>
    <string name="favoris">Favoris</string>
    <string name="compte">Compte</string>
    <string name="transaction_enregistrer">Votre transaction a bien été enregistrée !</string>
    <string name="Merci">SolidAll vous remercie !</string>
    <string name="facture_mail">La facture vous sera envoyée par mail !</string>
    <string name="redirection">Patientez, vous allez bientôt être redirigé !</string>
    <string name="typeDon">Souhaitez-vous réaliser un don unique ou un don récurrent ?</string>
    <string name="montant">Saisir le montant :</string>
    <string name="montant_input">montant</string>
    <string name="don_rec">Don récurrent (nécessite un compte utilisateur)</string>
    <string name="don_unique">Don unique</string>
    <string name="je_valide_mon_paiement">Je valide mon paiement</string>
    <string name="search_hint">Search associations...</string>
    <string name="visit_website">Visit Website</string>
    <string name="visiter_le_site_web">Visiter le site web</string>
    <string name="logout">Déconnexion</string>
    <string name="tags">Tags</string>
    <string name="connectez_vous_pour_un_don_r_gulier">Connectez-vous pour un don régulier</string>
    <string name="chercher_une_association">Chercher une association...</string>
    <string name="chercher_un_tag">Chercher un tag...</string>
    <string name="information_compte">Information compte</string>
</resources>