<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/Vert3_palette"
    tools:context=".ui.ConnexionActivity">

    <!-- Layout contenant le logo en haut à gauche et "Passer" en haut à droite -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <!-- Logo en haut à gauche -->
        <ImageView
            android:layout_width="116dp"
            android:layout_height="70dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:src="@drawable/logo_solidall" />

    </LinearLayout>

    <!-- Nom de l'application -->
    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="40dp" />

    <!-- Champ E-mail -->
    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:hint="@string/e_mail"
        android:background="@drawable/input_background"
        android:padding="15dp"
        android:paddingBottom="50dp"
        android:layout_marginBottom="30dp"
        android:textSize="16sp" />

    <!-- Champ Mot de passe -->

    <!-- Lien mot de passe oublié -->
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/input_background"
        android:gravity="center_vertical"
        android:orientation="horizontal"

        android:paddingEnd="15dp">

        <EditText
            android:id="@+id/motdepasse"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:hint="@string/mot_de_passe"
            android:background="@drawable/input_background"
            android:padding="15dp"
            android:paddingBottom="50dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/show_password"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_eye"
            app:tint="@color/Bleu_palette" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mot_de_passe_oubli"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="end"/>

    <!-- Bouton Connexion -->
    <Button
        android:id="@+id/btn_login"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/connexion"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/Orange_palette"
        android:layout_marginTop="20dp"/>

    <!-- Ligne de séparation -->
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" OU "
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="10dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white"/>
    </LinearLayout>

    <!-- Texte et Bouton Inscription -->
    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/vous_n_avez_pas_de_compte"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/inscription"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/Vert1_palette"
        />

    <Button
        android:id="@+id/btn_retour"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/retour"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/Orange_palette"
        />


</LinearLayout>
