<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/Vert3_palette">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:src="@drawable/logo_solidall"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name_app"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="50sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25sp"
        android:background="@color/Vert3_palette"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeDon"
            android:textSize="20sp"
            android:layout_marginBottom="20sp"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:paddingBottom="20dp" />
        <RadioGroup
            android:id="@+id/radio_group_don"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/don_unique"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/input_background"
                android:text="@string/don_unique"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:id="@+id/don_recurrent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:text="@string/don_rec"
                android:background="@drawable/input_background"/>
        </RadioGroup>
            <!-- FrameLayout to toggle between RadioButton and Login Button -->
            <FrameLayout
                android:id="@+id/don_recurrent_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40sp">
            
                <!-- RadioButton for recurring donations -->
                <RadioButton
                    android:id="@+id/don_recurrent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_rec"
                    android:background="@drawable/input_background" />

                <!-- Button for login -->
                <Button
                    android:id="@+id/login_for_recurrent_donation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Connectez-vous pour un don régulier"
                    android:backgroundTint="@color/Vert3_palette"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/montant"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:paddingTop="10sp"
                    android:layout_gravity="center"
                    android:paddingEnd="20dp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/montant_edit_text"
                    android:id="@+id/montant_input"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:hint="@string/montant_input"
                    android:inputType="number"
                    android:background="@drawable/input_background"/>

            </LinearLayout>


    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/buttonBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/retour"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/buttonNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="@string/suivant"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/Orange_palette"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>