<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Vert3_palette">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Compte"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="100sp" />

    <LinearLayout
        android:id="@+id/connected_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginHorizontal="15dp"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/information_compte"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_background_vert1">

            <TextView
                android:id="@+id/account_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Utilisateur : ?"
                android:textSize="18sp"
                android:layout_marginBottom="25sp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25sp">

                <TextView
                    android:id="@+id/mail_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="E-Mail : ?"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/mail_change"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button_orange"
                    android:backgroundTint="@color/Orange_palette"
                    android:src="@drawable/modifier"
                    android:scaleType="center"
                    app:tint="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25sp">

                <TextView
                    android:id="@+id/phone_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Téléphone : ?"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/phone_change"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button_orange"
                    android:backgroundTint="@color/Orange_palette"
                    android:src="@drawable/modifier"
                    android:scaleType="center"
                    app:tint="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25sp">

                <TextView
                    android:id="@+id/password_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="Mot de passe : ?"
                    android:textSize="18sp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/password_change"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button_orange"
                    android:backgroundTint="@color/Orange_palette"
                    android:src="@drawable/modifier"
                    android:scaleType="center"
                    app:tint="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <!-- Logout Button -->
        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/Vert3_palette"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:layout_marginTop="20dp" />
    </LinearLayout>

    <!-- Si l'utilisateur n'est pas connecté -->
    <LinearLayout
        android:id="@+id/not_connected_layout"
        android:layout_width="match_parent"
        android:layout_margin="50dp"
        android:layout_height="190dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/rounded_background_vert1"
        android:visibility="visible">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/Vert3_palette"
            android:layout_marginBottom="20sp"
            android:text="@string/connexion" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:backgroundTint="@color/Vert3_palette"
            android:text="@string/inscription" />
    </LinearLayout>

</RelativeLayout>